Closed
Bug 1374936
Opened 4 years ago
Closed 4 years ago
Invalid output format in D3D11SharedHandIemage::GetAsSourceFormat
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla56
People
(Reporter: jya, Assigned: jya)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
59 bytes,
text/x-review-board-request
|
mattwoodrow
:
review+
jcristau
:
approval-mozilla-beta+
|
Details |
59 bytes,
text/x-review-board-request
|
mattwoodrow
:
review+
|
Details |
Reported by Matt in bug 1372874. The transform use to convert NV12 to BGRA uses NV12 as output format, instead of BGRA.
Assignee | ||
Comment 1•4 years ago
|
||
How come this wasn't causing problems with reftest or anything using canvas?
status-firefox55:
--- → affected
tracking-firefox55:
--- → ?
Comment hidden (mozreview-request) |
Comment hidden (mozreview-request) |
Comment 4•4 years ago
|
||
mozreview-review |
Comment on attachment 8879835 [details] Bug 1374936: P1. Properly output ARGB32 with transform. https://reviewboard.mozilla.org/r/151232/#review156168
Attachment #8879835 -
Flags: review?(matt.woodrow) → review+
Comment 5•4 years ago
|
||
mozreview-review |
Comment on attachment 8879836 [details] Bug 1374936: P2. Check for error. https://reviewboard.mozilla.org/r/151234/#review156172
Attachment #8879836 -
Flags: review?(matt.woodrow) → review+
Pushed by jyavenard@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/86510ad18b92 P1. Properly output ARGB32 with transform. r=mattwoodrow https://hg.mozilla.org/integration/autoland/rev/3d2952de26c3 P2. Check for error. r=mattwoodrow
Comment 7•4 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/86510ad18b92 https://hg.mozilla.org/mozilla-central/rev/3d2952de26c3
Status: NEW → RESOLVED
Closed: 4 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
Comment 8•4 years ago
|
||
Jean-Yves, you requested tracking for 55, I assume you'll want to request uplift to beta? Was this fix verified on nightly?
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 9•4 years ago
|
||
Comment on attachment 8879835 [details] Bug 1374936: P1. Properly output ARGB32 with transform. Approval Request Comment [Feature/Bug causing the regression]: 1340398 [User impact if declined]: Bad content drawn on canvas. [Is this code covered by automated tests?]: No [Has the fix been verified in Nightly?]: Unsure [Needs manual test from QE? If yes, steps to reproduce]: It needs to write some code to verify it. [List of other uplifts needed for the feature/fix]: the two of this bug [Is the change risky?]: No [Why is the change risky/not risky?]: We set the proper data type on output [String changes made/needed]: none
Flags: needinfo?(jyavenard)
Attachment #8879835 -
Flags: approval-mozilla-beta?
Comment 10•4 years ago
|
||
So if we have no automated test and no manual test how can we be confident in this fix here? "Unsure" isn't really a great answer...
Flags: needinfo?(jyavenard)
Assignee | ||
Comment 11•4 years ago
|
||
because the bug in the code was so obvious, it jumped at you looking at the code. Having said that, in bug 1372874 they may have the answer on how to test it.
Flags: needinfo?(jyavenard)
Comment 12•4 years ago
|
||
Comment on attachment 8879835 [details] Bug 1374936: P1. Properly output ARGB32 with transform. video format fix, beta55+
Attachment #8879835 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Updated•4 years ago
|
Comment 13•4 years ago
|
||
bugherderuplift |
https://hg.mozilla.org/releases/mozilla-beta/rev/2b893184b932 https://hg.mozilla.org/releases/mozilla-beta/rev/2ab76e7f2244
You need to log in
before you can comment on or make changes to this bug.
Description
•