Bug 1374936 - Part 1: Properly output ARGB32 with transform. r=mattwoodrow, a=jcristau

MozReview-Commit-ID: Cp4fBtqDh7A

--HG--
extra : source : 86510ad18b92119b4796231405c33388caec841a